src/objects/Master__c.object
<CustomObject>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>LastName__c</fullName>
        <label>LastName</label>
        <length>23</length>
        <type>Text</type>
    </fields>
    <label>Master</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Master Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Masters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>